# ihpcss-laplace

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  laplace_serial.c
cmake/: CompilerFlags.cmake  FindPythonModule.cmake  FindSphinx.cmake  TestMacros.cmake
docs/: CMakeLists.txt  Makefile  conf.py  index.rst  laplace_equation.rst  software_engineering.rst
docs/doxygen/: CMakeLists.txt  Doxyfile.cmakein
src/: CMakeLists.txt  config.h.cmakein
src/laplace/: CMakeLists.txt
src/laplace/program/: Makefile  hybrid_mpiACC.c  hybrid_mpiACC.job
src/laplace/program/tests/: CMakeLists.txt  testexample.cpp
src/software-engineering/program/: CMakeLists.txt
